<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light"
    tools:context=".ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_recapt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="Mostly \nSunny"
            android:textColor="#FFFFFF"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="480dp"
            android:text="@string/moscow_russia"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/_16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_recapt" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_21celcius"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_city"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_city"
            app:layout_constraintTop_toBottomOf="@+id/tv_city" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like_32celcius"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="@+id/tv_city"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_city"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/tv_predict_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="150dp"
            android:layout_marginTop="600dp"
            android:text="@string/_14_00"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/tv_city"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_predict_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="600dp"
            android:layout_marginEnd="16dp"
            android:text="@string/_18_00"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintStart_toEndOf="@+id/tv_predict_first"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_predict_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/cloud"
            app:layout_constraintEnd_toEndOf="@+id/tv_predict_first"
            app:layout_constraintStart_toStartOf="@+id/tv_predict_first"
            app:layout_constraintTop_toBottomOf="@+id/tv_predict_first" />

        <ImageView
            android:id="@+id/iv_predict_second"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/night"
            app:layout_constraintEnd_toEndOf="@+id/tv_predict_second"
            app:layout_constraintStart_toStartOf="@+id/tv_predict_second"
            app:layout_constraintTop_toBottomOf="@+id/tv_predict_second" />

        <TextView
            android:id="@+id/tv_temp_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_32celcius"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/iv_predict_first"
            app:layout_constraintStart_toStartOf="@+id/iv_predict_first"
            app:layout_constraintTop_toBottomOf="@+id/iv_predict_first" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/_28celcius"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/iv_predict_second"
            app:layout_constraintStart_toStartOf="@+id/iv_predict_second"
            app:layout_constraintTop_toBottomOf="@+id/iv_predict_second" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>